<resources>
    <string name="app_name">MusicApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist">Playlist</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="youtube">Youtube</string>
    <string name="search_youtube">Search Youtube</string>
    <string name="search">Search</string>
    <string name="song_item">song_item</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="invalid_email">Please Enter a Valid Email Address</string>
    <string name="invalid_password">password should be 6 letters at least</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="create_playlist">You did not create Playlists Yet!</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="new_playlist">New Playlist</string>
    <string name="new_playlist_name">Enter New Playlist Name</string>
    <string name="add_songs">Add Songs</string>
    <string name="add_playlist_songs">Select  Songs add to %s</string>
    <string name="tap_to_start">Tap to start Mazzika</string>
    <string name="artist">Artist</string>
    <string name="artist_maher">Maher Zain</string>
    <string name="artist_mesut">Mesut Kurtis</string>
    <string name="mazzika">Mazzika Mix</string>
    <string name="no_playlist">Please Create a PlayList First</string>
    <string name="choose_playlist">Choose PlayList</string>
    <string name="artist_maher_image">Select Artist Maher Zain</string>
    <string name="artist_mesut_image">Select Artist Mesut Kerts</string>
    <string name="artist_mazzika">Select Artist Mazzika Mix</string>
    <string name="playback">PlayFragment background</string>
    <string name="playback_back">Playback background</string>
    <string name="play_prev">play previous song</string>
    <string name="play">play current song</string>
    <string name="play_next">play next song</string>
    <string name="add_favorite">add song to favorite</string>
    <string name="add_playlist">add song to playlist</string>
    <string name="select">select song</string>
    <string name="cover">song cover image</string>
    <string name="logout">Log out</string>
    <string name="no_internet">No Internet Connection Available</string>
    <string name="mix">mix</string>
    <string name="maher">maher</string>
    <string name="mesut">mesut</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="youtube_error">Error while initializing YouTubePlayer.</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_id">ca-app-pub-3204898404950904~3126424700</string>
</resources>
