<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/playlist"
        android:icon="@drawable/playlist_play_white"
        android:title="@string/playlist" />

    <item
        android:id="@+id/favorite"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/favorite" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/music"
        android:title="@string/home" />

    <item
        android:id="@+id/youtube"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/youtube" />

    <item
        android:id="@+id/artiste"
        android:icon="@android:drawable/presence_audio_away"
        android:title="@string/artist" />
</menu>