<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_back"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.udacity.capstone.musicapp.ui.SignUpActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?android:attr/textColorHint">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:nextFocusForward="@+id/password"
            android:singleLine="true"
            android:textColorHint="?android:attr/textColorHint">

            <requestFocus />
        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="?android:attr/textColorHint">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:singleLine="true"
            android:textColorHint="?android:attr/textColorHint" />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/theam_gray" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
