<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.udacity.capstone.musicapp.ui.fragment.ArtistFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/maher_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/maher_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:scaleType="fitStart"
                android:src="@drawable/maher"
                android:contentDescription="@string/artist_maher_image" />

            <TextView
                android:id="@+id/maher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:text="@string/artist_maher"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/mesut_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/Mesut_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:scaleType="fitXY"
                android:src="@drawable/mesut"
                android:contentDescription="@string/artist_mesut_image" />

            <TextView
                android:id="@+id/Mesut_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:text="@string/artist_mesut"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/mazzika_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/mix_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:scaleType="fitXY"
                android:src="@drawable/mazzika_mix"
                android:contentDescription="@string/artist_mazzika" />

            <TextView
                android:id="@+id/mix_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:text="@string/mazzika"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
